# p7-follow-person-maarinaa2023

./: CMakeLists.txt  package.xml
include/p7/: ControlNode.hpp  DetectionTo3DfromDepth.hpp  DetectionTo3DfromPC.hpp  ObstacleDetector.hpp  PIDController.hpp  YoloDetection.hpp
launch/: detection3d_yolo.launch.py  launch.control.py  launch.ob.py  launch.py
src/: control_node_main.cpp  detection_2d_to_3d_depth_main.cpp  detection_2d_to_3d_pc2_main.cpp  obstacle_detector_main.cpp  yolo_detection_main.cpp
src/p7/: ControlNode.cpp  DetectionTo3DfromDepth.cpp  DetectionTo3DfromPC.cpp  HSVFilter.cpp  ObstacleDetector.cpp  PIDController.cpp  YoloDetection.cpp
