<?xml version="1.0"?>
<package format="3">
  <name>p7</name>
  <version>0.0.0</version>
  <description>Example for communications with services actions</description>
  <maintainer email="m.antolinez.2023@alumnos.urjc.com">maarinaa2023</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>image_geometry</depend>
  <depend>yolo_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
